# teenytinycompiler

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Lexer.hpp.CC745616C7B78638.idx  main.cpp.EC796D7259E2AB30.idx
include/: Lexer.hpp  Token.hpp
src/: Lexer.cpp  Token.cpp  main.cpp
