cmake_minimum_required(VERSION 3.20)

project("TeenyTinyCompiler" VERSION 1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON )
set(CMAKE_CXX_EXTENSIONS OFF)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)

add_executable(TeenyTinyCompiler 
                "src/main.cpp"
                "src/Lexer.cpp"
                "src/Token.cpp"
            )
